Structure and data managment chainges